fixing border problems and realigning classes to work with BEM notation

--- a/src/components/tables/tables.scss
+++ b/src/components/tables/tables.scss
@@ -46,8 +46,8 @@ table {
     padding-left: $md;
   }
 
-  &.hover-highlight tbody tr:not(.is-selected),
-  &.hover-highlight tbody tr:not(.is-selected):nth-child(even) {
+  &.table--hover-highlight tbody tr:not(.is-selected),
+  &.table--hover-highlight tbody tr:not(.is-selected):nth-child(even) {
     &:hover {
       th {
         background-color: #fff3c3
@@ -98,23 +98,49 @@ table {
   }
 }
 
-table.gray-borders {
+table.table--gray-borders {
   border: #ddd 1px solid;
 
   & > tr,
   & > tbody > tr,
-  & > tfoot > tr {
+  & > tfoot > tr,
+  & > thead > tr,
+  & > caption {
     & > td,
     & > th {
       border: #ddd 1px solid;
     }
   }
 
-  & > thead > tr,
-  & > caption {
-    & > td,
-    & > th {
-      border: #7c7c7c 1px solid;
+  & > tbody > tr:first-child {
+    th, td {
+      border-top: none;
+    }
+  }
+
+
+  &.is-striped, &.table--is-striped {
+    & > thead > tr,
+    & > caption {
+      & > td,
+      & > th {
+        border: #7c7c7c 1px solid;
+      }
+    }
+
+    & > thead > tr {
+      & > td,
+      & > th {
+        border-bottom: #ddd 1px solid;
+
+        &:first-child {
+          border-left: #ddd 1px solid;
+        }
+
+        &:last-child {
+          border-right: #ddd 1px solid;
+        }
+      }
     }
   }
 }
@@ -145,10 +171,10 @@ table.gray-borders {
       }
     }
 
-    &.table--striped {
+    &.table__responsive-container--is-striped {
       border: 1px solid #eee;
 
-      &.table--gray-borders {
+      &.table__responsive-container--gray-borders {
         border: unset;
       }
 
@@ -168,18 +194,38 @@ table.gray-borders {
           filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.2));
         }
       }
+
+      &.table__responsive-container--gray-borders .table__responsive-header .table__sticky-heading {
+        border-left: #7c7c7c 1px solid;
+        border-top: #7c7c7c 1px solid;
+        border-bottom: #ddd 1px solid;
+
+        &:first-child {
+          border-left: 1px solid #ddd;
+        }
+      }
     }
 
-    &.table--gray-borders {
+    &.table__responsive-container--gray-borders {
       .table__visual-caption {
         border: #7c7c7c 1px solid;
         border-bottom: none;
       }
 
+      table > tbody > tr:first-child {
+        th, td {
+          border-top: none;
+        }
+      }
+
       .table__responsive-header .table__sticky-heading {
-        border-left: #7c7c7c 1px solid;
-        border-top: #7c7c7c 1px solid;
-        border-bottom: #7c7c7c 1px solid;
+        border-left: #ddd 1px solid;
+        border-top: #ddd 1px solid;
+        border-bottom: #ddd 1px solid;
+
+        &:first-child {
+          border-left: 1px solid #ddd;
+        }
       }
     }
 
@@ -188,10 +234,6 @@ table.gray-borders {
 
       &.is-striped {
         border: none;
-      }
-
-      caption {
-        @include element-invisible;
       }
     }
 
@@ -204,7 +246,7 @@ table.gray-borders {
       transition: border-right 0.3s ease-in-out;
     }
 
-    &.table--is-sticky-left.table--striped.table--left-sticky-minwidth .table__sticky-heading:first-child {
+    &.table--is-sticky-left.table__responsive-container--is-striped.table--left-sticky-minwidth .table__sticky-heading:first-child {
       border-right: none;
     }
 
@@ -240,7 +282,7 @@ table.gray-borders {
       overflow-x: hidden;
     }
 
-    .table--striped & {
+    .table__responsive-container--is-striped & {
       .table__sticky-heading {
         background: $primary;
         text-transform: uppercase;
